<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.StepsDetailsFragment">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exo_playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
       ></com.google.android.exoplayer2.ui.PlayerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Back"
            android:layout_weight="1"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="Next" />
    </LinearLayout>


</LinearLayout>